@@ -13,14 +13,17 @@ import java.util.LinkedList;
 import java.util.List;
 
 import org.cloudbus.cloudsim.core.CloudSim;
+import org.cloudbus.cloudsim.core.GuestEntity;
+import org.cloudbus.cloudsim.core.VirtualEntity;
 import org.cloudbus.cloudsim.lists.PeList;
 import org.cloudbus.cloudsim.provisioners.BwProvisioner;
 import org.cloudbus.cloudsim.provisioners.RamProvisioner;
 
 /**
- * The class of a host supporting dynamic workloads and performance degradation.
- * 
+ * A host supporting dynamic workloads and performance degradation.
+ *
  * @author Anton Beloglazov
+ * @author Remo Andreoli
  * @since CloudSim Toolkit 2.0
  */
 public class HostDynamicWorkload extends Host {
@@ -31,8 +34,8 @@ public class HostDynamicWorkload extends Host {
 	/** The previous utilization mips. */
 	private double previousUtilizationMips;
 
-	/** The state history. */
-	private final List<HostStateHistoryEntry> stateHistory = new LinkedList<HostStateHistoryEntry>();
+	/** The host utilization state history. */
+	private final List<HostStateHistoryEntry> stateHistory = new LinkedList<>();
 
 	/**
 	 * Instantiates a new host.
@@ -40,8 +43,8 @@ public class HostDynamicWorkload extends Host {
 	 * @param id the id
 	 * @param ramProvisioner the ram provisioner
 	 * @param bwProvisioner the bw provisioner
-	 * @param storage the storage
-	 * @param peList the pe list
+	 * @param storage the storage capacity
+	 * @param peList the host's PEs list
 	 * @param vmScheduler the VM scheduler
 	 */
 	public HostDynamicWorkload(
@@ -56,76 +59,64 @@ public class HostDynamicWorkload extends Host {
 		setPreviousUtilizationMips(0);
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * @see cloudsim.Host#updateVmsProcessing(double)
-	 */
 	@Override
-	public double updateVmsProcessing(double currentTime) {
-		double smallerTime = super.updateVmsProcessing(currentTime);
+	public double updateCloudletsProcessing(double currentTime) {
+		double smallerTime = super.updateCloudletsProcessing(currentTime);
 		setPreviousUtilizationMips(getUtilizationMips());
 		setUtilizationMips(0);
 		double hostTotalRequestedMips = 0;
 
-		for (Vm vm : getVmList()) {
-			getVmScheduler().deallocatePesForVm(vm);
+		for (GuestEntity vm : getGuestList()) {
+			getGuestScheduler().deallocatePesForGuest(vm);
 		}
 
-		for (Vm vm : getVmList()) {
-			getVmScheduler().allocatePesForVm(vm, vm.getCurrentRequestedMips());
+		for (GuestEntity vm : getGuestList()) {
+			getGuestScheduler().allocatePesForGuest(vm, vm.getCurrentRequestedMips());
 		}
 
-		for (Vm vm : getVmList()) {
+		for (GuestEntity vm : getGuestList()) {
 			double totalRequestedMips = vm.getCurrentRequestedTotalMips();
-			double totalAllocatedMips = getVmScheduler().getTotalAllocatedMipsForVm(vm);
-
+			double totalAllocatedMips = getGuestScheduler().getTotalAllocatedMipsForGuest(vm);
 			if (!Log.isDisabled()) {
-				Log.formatLine(
-						"%.2f: [Host #" + getId() + "] Total allocated MIPS for VM #" + vm.getId()
-								+ " (Host #" + vm.getHost().getId()
-								+ ") is %.2f, was requested %.2f out of total %.2f (%.2f%%)",
-						CloudSim.clock(),
-						totalAllocatedMips,
-						totalRequestedMips,
-						vm.getMips(),
-						totalRequestedMips / vm.getMips() * 100);
+				Log.printlnConcat(CloudSim.clock(),
+						": [Host #", getId(), "] Total allocated MIPS for VM #", vm.getId()
+								, " (Host #", vm.getHost().getId()
+								, ") is ", totalAllocatedMips,", was requested ", totalRequestedMips
+								, " out of total ",vm.getMips(), " (", totalRequestedMips / vm.getMips() * 100,"%.2f%%)");
 
-				List<Pe> pes = getVmScheduler().getPesAllocatedForVM(vm);
+				List<Pe> pes = getGuestScheduler().getPesAllocatedForGuest(vm);
 				StringBuilder pesString = new StringBuilder();
 				for (Pe pe : pes) {
 					pesString.append(String.format(" PE #" + pe.getId() + ": %.2f.", pe.getPeProvisioner()
-							.getTotalAllocatedMipsForVm(vm)));
+							.getTotalAllocatedMipsForGuest(vm)));
 				}
-				Log.formatLine(
-						"%.2f: [Host #" + getId() + "] MIPS for VM #" + vm.getId() + " by PEs ("
-								+ getNumberOfPes() + " * " + getVmScheduler().getPeCapacity() + ")."
-								+ pesString,
-						CloudSim.clock());
+				Log.printlnConcat(CloudSim.clock(),
+						": [Host #", getId(), "] MIPS for VM #", vm.getId(), " by PEs ("
+								, getNumberOfPes(), " * ", getGuestScheduler().getPeCapacity() + ")."
+								, pesString);
 			}
 
-			if (getVmsMigratingIn().contains(vm)) {
-				Log.formatLine("%.2f: [Host #" + getId() + "] VM #" + vm.getId()
-						+ " is being migrated to Host #" + getId(), CloudSim.clock());
+			if (getGuestsMigratingIn().contains(vm)) {
+				Log.printlnConcat(CloudSim.clock(), ": [Host #", getId(), "] VM #" + vm.getId()
+						, " is being migrated to Host #", getId());
 			} else {
 				if (totalAllocatedMips + 0.1 < totalRequestedMips) {
-					Log.formatLine("%.2f: [Host #" + getId() + "] Under allocated MIPS for VM #" + vm.getId()
-							+ ": %.2f", CloudSim.clock(), totalRequestedMips - totalAllocatedMips);
+					Log.printlnConcat(CloudSim.clock(), ": [Host #", getId(), "] Under allocated MIPS for VM #", vm.getId()
+							, ": ", totalRequestedMips - totalAllocatedMips);
 				}
 
 				vm.addStateHistoryEntry(
 						currentTime,
 						totalAllocatedMips,
 						totalRequestedMips,
-						(vm.isInMigration() && !getVmsMigratingIn().contains(vm)));
+						(vm.isInMigration() && !getGuestsMigratingIn().contains(vm)));
 
 				if (vm.isInMigration()) {
-					Log.formatLine(
-							"%.2f: [Host #" + getId() + "] VM #" + vm.getId() + " is in migration",
-							CloudSim.clock());
+					Log.printlnConcat(CloudSim.clock(),
+							": [Host #", getId(), "] VM #", vm.getId(), " is in migration");
 					totalAllocatedMips /= 0.9; // performance degradation due to migration - 10%
 				}
 			}
-
 			setUtilizationMips(getUtilizationMips() + totalAllocatedMips);
 			hostTotalRequestedMips += totalRequestedMips;
 		}
@@ -141,16 +132,25 @@ public class HostDynamicWorkload extends Host {
 
 	/**
 	 * Gets the completed vms.
-	 * 
+	 *
 	 * @return the completed vms
 	 */
-	public List<Vm> getCompletedVms() {
-		List<Vm> vmsToRemove = new ArrayList<Vm>();
-		for (Vm vm : getVmList()) {
-			if (vm.isInMigration()) {
+	public List<GuestEntity> getCompletedVms() {
+		List<GuestEntity> vmsToRemove = new ArrayList<>();
+		for (GuestEntity guest : getGuestList()) {
+			if (guest.isInMigration()) {
 				continue;
 			}
-			if (vm.getCurrentRequestedTotalMips() == 0) {
+			// If vm is in waiting state then don't kill it yet !!!!!!!!!
+			if (guest instanceof VirtualEntity vm && vm.isInWaiting()) {
+				continue;
+			}
+
+			if (guest.getCurrentRequestedTotalMips() == 0) {
+				vmsToRemove.add(guest);
+			}
+
+			if (guest instanceof VirtualEntity vm && vm.getNumberOfGuests()==0) {
 				vmsToRemove.add(vm);
 			}
 		}
@@ -158,40 +158,47 @@ public class HostDynamicWorkload extends Host {
 	}
 
 	/**
-	 * Gets the max utilization among by all PEs.
+	 * Gets the completed vms.
+	 *
+	 * @return the completed vms
+	 */
+	public int getNumberOfGuests() {
+		int numberofContainers = 0;
+		for (GuestEntity guest : getGuestList()) {
+			if (guest instanceof VirtualEntity vm) {
+				numberofContainers += vm.getNumberOfGuests();
+				Log.print("The number of containers in VM# " + vm.getId() + "is: " + vm.getNumberOfGuests());
+				Log.println();
+			}
+		}
+		return numberofContainers;
+	}
+
+	/**
+	 * Gets the max utilization percentage among by all PEs.
 	 * 
-	 * @return the utilization
+	 * @return the maximum utilization percentage
 	 */
 	public double getMaxUtilization() {
 		return PeList.getMaxUtilization(getPeList());
 	}
 
 	/**
-	 * Gets the max utilization among by all PEs allocated to the VM.
-	 * 
-	 * @param vm the vm
-	 * @return the utilization
-	 */
-	public double getMaxUtilizationAmongVmsPes(Vm vm) {
-		return PeList.getMaxUtilizationAmongVmsPes(getPeList(), vm);
-	}
-
-	/**
-	 * Gets the utilization of memory.
+	 * Gets the utilization of memory (in absolute values).
 	 * 
 	 * @return the utilization of memory
 	 */
-	public double getUtilizationOfRam() {
-		return getRamProvisioner().getUsedRam();
+	public int getUtilizationOfRam() {
+		return getGuestRamProvisioner().getUsedRam();
 	}
 
 	/**
-	 * Gets the utilization of bw.
+	 * Gets the utilization of bw (in absolute values).
 	 * 
 	 * @return the utilization of bw
 	 */
 	public double getUtilizationOfBw() {
-		return getBwProvisioner().getUsedBw();
+		return getGuestBwProvisioner().getUsedBw();
 	}
 
 	/**
@@ -201,7 +208,7 @@ public class HostDynamicWorkload extends Host {
 	 */
 	public double getUtilizationOfCpu() {
 		double utilization = getUtilizationMips() / getTotalMips();
-		if (utilization > 1 && utilization < 1.01) {
+		if (utilization > 1) {
 			utilization = 1;
 		}
 		return utilization;
@@ -210,11 +217,11 @@ public class HostDynamicWorkload extends Host {
 	/**
 	 * Gets the previous utilization of CPU in percentage.
 	 * 
-	 * @return the previous utilization of cpu
+	 * @return the previous utilization of cpu in percents
 	 */
 	public double getPreviousUtilizationOfCpu() {
 		double utilization = getPreviousUtilizationMips() / getTotalMips();
-		if (utilization > 1 && utilization < 1.01) {
+		if (utilization > 1) {
 			utilization = 1;
 		}
 		return utilization;
@@ -224,15 +231,17 @@ public class HostDynamicWorkload extends Host {
 	 * Get current utilization of CPU in MIPS.
 	 * 
 	 * @return current utilization of CPU in MIPS
+         * //@TODO This method only calls the  {@link #getUtilizationMips()}.
+         * getUtilizationMips may be deprecated and its code copied here.
 	 */
 	public double getUtilizationOfCpuMips() {
 		return getUtilizationMips();
 	}
 
 	/**
-	 * Gets the utilization mips.
+	 * Gets the utilization of CPU in MIPS.
 	 * 
-	 * @return the utilization mips
+	 * @return current utilization of CPU in MIPS
 	 */
 	public double getUtilizationMips() {
 		return utilizationMips;
@@ -244,29 +253,30 @@ public class HostDynamicWorkload extends Host {
 	 * @param utilizationMips the new utilization mips
 	 */
 	protected void setUtilizationMips(double utilizationMips) {
+
 		this.utilizationMips = utilizationMips;
 	}
 
 	/**
-	 * Gets the previous utilization mips.
+	 * Gets the previous utilization of CPU in mips.
 	 * 
-	 * @return the previous utilization mips
+	 * @return the previous utilization of CPU in mips
 	 */
 	public double getPreviousUtilizationMips() {
 		return previousUtilizationMips;
 	}
 
 	/**
-	 * Sets the previous utilization mips.
+	 * Sets the previous utilization of CPU in mips.
 	 * 
-	 * @param previousUtilizationMips the new previous utilization mips
+	 * @param previousUtilizationMips the new previous utilization of CPU in mips
 	 */
 	protected void setPreviousUtilizationMips(double previousUtilizationMips) {
 		this.previousUtilizationMips = previousUtilizationMips;
 	}
 
 	/**
-	 * Gets the state history.
+	 * Gets the host state history.
 	 * 
 	 * @return the state history
 	 */
@@ -275,8 +285,8 @@ public class HostDynamicWorkload extends Host {
 	}
 
 	/**
-	 * Adds the state history entry.
-	 * 
+	 * Adds a host state history entry.
+	 *
 	 * @param time the time
 	 * @param allocatedMips the allocated mips
 	 * @param requestedMips the requested mips
@@ -292,7 +302,7 @@ public class HostDynamicWorkload extends Host {
 				requestedMips,
 				isActive);
 		if (!getStateHistory().isEmpty()) {
-			HostStateHistoryEntry previousState = getStateHistory().get(getStateHistory().size() - 1);
+			HostStateHistoryEntry previousState = getStateHistory().getLast();
 			if (previousState.getTime() == time) {
 				getStateHistory().set(getStateHistory().size() - 1, newState);
 				return;
@@ -300,5 +310,4 @@ public class HostDynamicWorkload extends Host {
 		}
 		getStateHistory().add(newState);
 	}
-
 }
