@@ -74,7 +74,7 @@ public class VMRequestGenerator {
 			obj.put("size", vm.size);
 			obj.put("pes", vm.pe);
 			obj.put("mips", vm.mips);
-			obj.put("ram", new Integer(vm.ram));
+			obj.put("ram", Integer.valueOf(vm.ram));
 			obj.put("bw", vm.bw);
 			obj.put("starttime", vm.starttime);
 			obj.put("endtime", vm.endtime);
